# hdc-os

./: .gitignore  Project.md  README.md
30-Procurement/: .env.example  Procurement.md  README.md  pyproject.toml
30-Procurement/architecture/: Data-Model.md  Execution-Model.md  Procurement-Architecture.md  RWO-0010-Product-Evidence-Contract.md  WO-0019-Architecture-Compatibility.md
30-Procurement/cases/: PC-0001-Router-USV.yaml  PC-0002-Rollbarer-Netzwerkschrank.yaml  PC-0003-Firewall-Appliance.yaml  PC-0004-Managed-Switch.yaml  PC-0005-Rack-USV.yaml  README.md
30-Procurement/catalog/products/: apc-bx500mi.yaml  apc-bx750mi-gr.yaml  apc-bx750mi.yaml
30-Procurement/config/: portfolio.yaml  sources.yaml  watch-policy.example.yaml  watch-policy.yaml
30-Procurement/operations/: Backup-and-Restore.md  Operations-Runbook.md  Windows-Task-Scheduler.md
30-Procurement/schema/migrations/: 001_initial_schema.sql  002_pc001_vertical_slice.sql  003_event_classification.sql  004_live_watch_fields.sql  005_product_evidence.sql  006_operations_journal.sql
30-Procurement/scripts/: backup.ps1  initialize.ps1  install.ps1  restore.ps1  run-watch.ps1  show-status.ps1
30-Procurement/src/procurement_watch/: __init__.py  adapters.py  backup.py  catalog.py  cli.py  config.py  database.py  delivery.py  evaluator.py  events.py  journal.py  logging_utils.py  migrations.py  reporting.py  version.py  (+1 more)
30-Procurement/templates/: procurement-report.html
30-Procurement/tests/: test_runtime.py  test_wo0010.py  test_wo0019.py  test_wo0020.py  test_wo0021.py  test_wo0022.py  test_wo0023.py
(+14 files in other folders)
