[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hdc-procurement-watch"
version = "0.1.0"
description = "Local, reproducible procurement watch runtime for HDC-OS"
requires-python = ">=3.12,<3.13"
dependencies = ["PyYAML>=6.0,<7"]

[project.optional-dependencies]
test = ["pytest>=8.0,<9"]

[project.scripts]
procurement-watch = "procurement_watch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
